--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -25,7 +25,7 @@
 </ul>
 <div class="w3-animate-right w3-margin w3-round alert success">
     <span class="closebtn">&times;</span>
-    <p>Hello, {{ liked_user }}! You have successfully signed in to your account!</p>
+    <p>Hello, {{ logged_in_user }}! You have successfully signed in to your account!</p>
 </div>
 <script>
 var close = document.getElementsByClassName("closebtn");
@@ -55,7 +55,7 @@ for (i = 0; i < close.length; i++) {
             slideIndex++;
             if (slideIndex > x.length) {slideIndex = 1}
             x[slideIndex-1].style.display = "block";
-            setTimeout(carousel, 10000); // Change image every 2 seconds
+            setTimeout(carousel, 10000);
         }
     </script>
     <div class="w3-display-middle w3-padding-xlarge w3-border w3-wide w3-light-grey w3-text-dark-grey w3-center w3-round" style="opacity: 0.7">
@@ -66,7 +66,7 @@ for (i = 0; i < close.length; i++) {
 <!-- Navbar (placed at the bottom of the header image) -->
     <ul class="w3-navbar w3-xlarge w3-red w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
         <li><a class="w3-hover-green" href="{{ url_for("home") }}">Home</a></li>
-        <li><a class="w3-hover-green" href="{{ url_for("get_profile") }}">Profile</a></li>
+        <li><a class="w3-hover-green" href="{{ url_for("get_profile", username=logged_in_user.username) }}">Profile</a></li>
         <li><a class="w3-hover-green" href="{{ url_for("do_signout") }}">Sign Out</a></li>
     </ul>
 </header>
@@ -74,7 +74,7 @@ for (i = 0; i < close.length; i++) {
 {#<!-- Navbar on small screens -->#}
 <ul class="w3-navbar w3-large w3-margin-top w3-red w3-hide-large w3-hide-medium">
     <li><a class="w3-hover-green" href="{{ url_for("home") }}">Home</a></li>
-    <li><a class="w3-hover-green" href="{{ url_for("get_profile") }}">Profile</a></li>
+    <li><a class="w3-hover-green" href="{{ url_for("get_profile", username=logged_in_user.username) }}">Profile</a></li>
     <li><a class="w3-hover-green" href="{{ url_for("do_signout") }}">Sign Out</a></li>
 </ul>
 
@@ -86,31 +86,18 @@ for (i = 0; i < close.length; i++) {
         <div class="w3-quarter w3-container w3-margin-top">
             <div class="w3-border-bottom" id="sidebar">
                 <div class="w3-container w3-green w3-round w3-center">
-                    <h1>Top 15</h1>
+                    <h1>Top 10</h1>
                 </div>
                 <div class="w3-container">
                     {% for pet in rank %}
-                        <h5>{{ pet[1] }} : {{ pet[0] }}</h5>
+                        <h3><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ pet[1] }} : {{ pet[0] }}</h3>
                     {% endfor %}
-                <h5>Test</h5>
-                <h5>Test</h5>
-                <h5>Test</h5>
-                <h5>Test</h5>
-                <h5>Test</h5>
-                <h5>Test</h5>
-                <h5>Test</h5>
-                <h5>Test</h5>
-                <h5>Test</h5>
-                <h5>Test</h5>
-                <h5>Test</h5>
-                <h5>Test</h5>
-                <h5>Test</h5>
                 </div>
             </div>
             <script>
                 $(document).ready(function(){
                     if (jQuery(window).innerWidth() >600) {
-                        $("#sidebar").sticky({bottomSpacing: 130});
+                        $("#sidebar").sticky({topSpacing: 16, bottomSpacing: 130});
                     }
                 })
             </script>
@@ -121,20 +108,21 @@ for (i = 0; i < close.length; i++) {
                     {% set block_name = "block_" + user.username %}
                     <div class="w3-rest w3-border-bottom w3-margin-bottom">
                         <div class="hovereffect w3-container w3-twothird w3-margin-top w3-margin-bottom">
-                            <img src="{{ user.pet.img_ava }}" alt="{{ user.pet.name }}" class="w3-image" width="100%">
+                            <img src="../static/uploads/{{ user.pet.img_ava }}" class="w3-image" width="100%">
                             <div class="overlay">
                                <h2>{{ user.pet.name }}</h2>
-                               <a class="info" href="#contact">View Profile</a>
+                               <a class="info" href="{{ url_for("get_profile", username=user.username) }}">View Profile</a>
                             </div>
                         </div>
                         <div class="w3-third w3-container">
                             <h5><i class="w3-text-green fa fa-user w3-margin-right"></i>{{ user.username }}</h5>
                             <h5><i class="w3-text-green fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h5>
                             <h5><i class="w3-text-green fa fa-pencil w3-margin-right"></i>{{ user.pet.des }}</h5>
-                            {% if liked_user in user.pet.liked_users %}
+                            <h5><i class="w3-text-yellow fa fa-trophy  w3-margin-right"></i>{{ user.pet.rank }}</h5>
+                            {% if logged_in_user in user.pet.liked_users %}
                                 <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i>{{ user.pet.like_count }}</h5>
                                 <div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>
-                            {% elif liked_user not in user.pet.liked_users %}
+                            {% elif logged_in_user not in user.pet.liked_users %}
                                 <div class="{{block_name}}" >
                                     <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a class="count" id="{{ block_name }}_1">{{ user.pet.like_count }}</a></h5>
                                     <button type="button" class="w3-red w3-padding w3-margin-bottom w3-btn-block w3-round" id="{{ block_name }}_2">Vote</button>
@@ -164,7 +152,9 @@ for (i = 0; i < close.length; i++) {
                             <div class="w3-container w3-green w3-center">
                                 <p>More Pics</p>
                             </div>
-                            <img src="../static/uploads/{{ user.pet.uploads[0].img_upload }}" style="width: 100%">
+                            {% for i in range(0, user.pet.uploads|length) %}
+                                <img class="w3-image" src="../static/uploads/{{ user.pet.uploads[i].img_upload }}">
+                            {% endfor %}
                         </div>
                     </div>
                 {% endif %}
