--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -25,7 +25,7 @@
 </ul>
 <div class="w3-animate-right w3-margin w3-round alert success">
     <span class="closebtn">&times;</span>
-    <p>Hello, {{ logged_in_user }}! You have successfully signed in to your account!</p>
+    <p>Hello, {{ logged_in_user.username }}! You have successfully signed in to your account!</p>
 </div>
 <script>
 var close = document.getElementsByClassName("closebtn");
@@ -104,7 +104,7 @@ for (i = 0; i < close.length; i++) {
         </div>
         <div class="w3-rest w3-container w3-border-left">
             {% for user in users %}
-                {% if user.pet != None %}
+                {% if user.pet is defined %}
                     {% set block_name = "block_" + user.username %}
                     <div class="w3-rest w3-border-bottom w3-margin-bottom">
                         <div class="hovereffect w3-container w3-twothird w3-margin-top w3-margin-bottom">
@@ -119,10 +119,10 @@ for (i = 0; i < close.length; i++) {
                             <h5><i class="w3-text-green fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h5>
                             <h5><i class="w3-text-green fa fa-pencil w3-margin-right"></i>{{ user.pet.des }}</h5>
                             <h5><i class="w3-text-yellow fa fa-trophy  w3-margin-right"></i>{{ user.pet.rank }}</h5>
-                            {% if logged_in_user in user.pet.liked_users %}
+                            {% if logged_in_user.username in user.pet.liked_users %}
                                 <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i>{{ user.pet.like_count }}</h5>
                                 <div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>
-                            {% elif logged_in_user not in user.pet.liked_users %}
+                            {% elif logged_in_user.username not in user.pet.liked_users %}
                                 <div class="{{block_name}}" >
                                     <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a class="count" id="{{ block_name }}_1">{{ user.pet.like_count }}</a></h5>
                                     <button type="button" class="w3-red w3-padding w3-margin-bottom w3-btn-block w3-round" id="{{ block_name }}_2">Vote</button>
