--- a/templates/profile.html
+++ b/templates/profile.html
@@ -138,7 +138,7 @@
             <div class="w3-quarter w3-container w3-margin-bottom">
                 <div class="w3-card-2 sidebar">
                     <div class="w3-container w3-green w3-center">
-                        <h1>Stats</h1>
+                        <h1>Rank & Votes</h1>
                     </div>
                     <div class="w3-container">
                         {% if logged_in_user.username in user.pet.liked_users %}
@@ -196,135 +196,71 @@
                 })
             </script>
             <div class="w3-half w3-container">
-                <div class="w3-card-2">
-                    <div class="w3-container w3-green">
-                        <h1>Upload</h1>
-                    </div>
-                    <div class="w3-container w3-margin-top">
-                        <form method="post" action="{{ url_for("get_profile", username=logged_in_user.username) }}" enctype="multipart/form-data" id="upload">
-                            <div style="height: 0px; overflow: hidden">
-                                <input type="file" id="img_upload" name="img_upload">
-                            </div>
-                            <button type="button" class="w3-red w3-btn-block w3-round w3-margin-bottom" onclick="chooseFile();">Choose a picture to upload</button>
-                            <script>
-                                function chooseFile() {
-                                    $("#img_upload").click();
-                                }
-                            </script>
-                            <img class="w3-image w3-margin-bottom" src="" id="img_preview">
-                            <script>
-                                function readURL(input) {
-                                    if (input.files && input.files[0]) {
-                                        var reader = new FileReader();
-                                        reader.onload = function (e) {
-                                            $('#img_preview').attr('src', e.target.result);
-                                        };
-                                        reader.readAsDataURL(input.files[0]);
+                {% if logged_in_user == user %}
+                    <div class="w3-card-2" style="margin-bottom: 32px">
+                        <div class="w3-container w3-green">
+                            <h1>Upload</h1>
+                        </div>
+                        <div class="w3-container w3-margin-top">
+                            <form method="post" action="{{ url_for("get_profile", username=logged_in_user.username) }}" enctype="multipart/form-data" id="upload">
+                                <div style="height: 0px; overflow: hidden">
+                                    <input type="file" id="img_upload" name="img_upload">
+                                </div>
+                                <button type="button" class="w3-red w3-btn-block w3-round w3-margin-bottom" onclick="chooseFile();">Choose a picture to upload</button>
+                                <script>
+                                    function chooseFile() {
+                                        $("#img_upload").click();
                                     }
-                                }
-                                $("#img_upload").change(function(){
-                                    readURL(this);
-                                });
-                            </script>
-                            <style>
-                                textarea {
-                                    width: 100%;
-                                    height: 100px;
-                                    padding: 16px 16px;
-                                    margin-bottom: 12px;
-                                    box-sizing: border-box;
-                                    border: 2px solid #ccc;
-                                    border-radius: 4px;
-                                    background-color: #f8f8f8;
-                                    font-size: 16px;
-                                    resize: none;
-                                }
-                            </style>
-                            <textarea name="caption" form="upload" placeholder="Write something about the picture..." maxlength="200"></textarea>
-                            <input type="submit" name="upload" value="Upload" class="w3-button w3-red w3-btn-block w3-round w3-margin-bottom">
-                        </form>
+                                </script>
+                                <img class="w3-image w3-margin-bottom" src="" id="img_preview">
+                                <script>
+                                    function readURL(input) {
+                                        if (input.files && input.files[0]) {
+                                            var reader = new FileReader();
+                                            reader.onload = function (e) {
+                                                $('#img_preview').attr('src', e.target.result);
+                                            };
+                                            reader.readAsDataURL(input.files[0]);
+                                        }
+                                    }
+                                    $("#img_upload").change(function(){
+                                        readURL(this);
+                                    });
+                                </script>
+                                <style>
+                                    textarea {
+                                        width: 100%;
+                                        height: 100px;
+                                        padding: 16px 16px;
+                                        margin-bottom: 12px;
+                                        box-sizing: border-box;
+                                        border: 2px solid #ccc;
+                                        border-radius: 4px;
+                                        background-color: #f8f8f8;
+                                        font-size: 16px;
+                                        resize: none;
+                                    }
+                                </style>
+                                <textarea name="caption" form="upload" placeholder="Write something about the picture..." maxlength="200"></textarea>
+                                <input type="submit" name="upload" value="Upload" class="w3-button w3-red w3-btn-block w3-round w3-margin-bottom">
+                            </form>
+                        </div>
                     </div>
-                </div>
-                <div class="w3-container w3-border-left">
-
-                </div>
+                {% endif %}
+                {% if user.pet.uploads is defined %}
+                    <div class="w3-container w3-border-left">
+                        {% for i in range(0, user.pet.uploads|length) %}
+                            {% set block_name = "block_" + i|string %}
+                            <div class="w3-border-bottom w3-margin-bottom">
+                                <img src="../static/uploads/{{ user.pet.uploads[i].img_upload }}" class="w3-image w3-round" style="width: 100%">
+                                <h5><i class="w3-text-green fa fa-comment w3-margin-right"></i>{{ user.pet.uploads[i].caption }}</h5>
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
             </div>
         </div>
-
     {% endif %}
-{#    <div class="w3-row">#}
-{#        <div class="w3-quarter w3-container">#}
-{#            <div class="w3-container w3-border-bottom" id="sidebar">#}
-{#                <h1 class="w3-margin-top w3-round w3-green w3-center">Top 15</h1>#}
-{#            </div>#}
-{#            <script>#}
-{#                $(document).ready(function(){#}
-{#                    if (jQuery(window).innerWidth() >600) {#}
-{#                        $("#sidebar").sticky({bottomSpacing: 130});#}
-{#                    }#}
-{#                })#}
-{#            </script>#}
-{#        </div>#}
-{#        <div class="w3-rest w3-container w3-border-left">#}
-{#            {% for user in users %}#}
-{#                {% if user.pet != None %}#}
-{#                    {% set block_name = "block_" + user.username %}#}
-{#                    <div class="w3-rest w3-border-bottom w3-margin-bottom">#}
-{#                        <div class="hovereffect w3-container w3-twothird w3-margin-top w3-margin-bottom">#}
-{#                            <img src="{{ user.pet.img_ava }}" alt="{{ user.pet.name }}" class="w3-image" width="100%">#}
-{#                            <div class="overlay">#}
-{#                               <h2>{{ user.pet.name }}</h2>#}
-{#                               <a class="info" href="#contact">View Profile</a>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <div class="w3-third w3-container">#}
-{#                            <h5><i class="w3-text-green fa fa-user w3-margin-right"></i>{{ user.username }}</h5>#}
-{#                            <h5><i class="w3-text-green fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h5>#}
-{#                            <h5><i class="w3-text-green fa fa-pencil w3-margin-right"></i>{{ user.pet.des }}</h5>#}
-{#                            {% if liked_user in user.pet.liked_users %}#}
-{#                                <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i>{{ user.pet.like_count }}</h5>#}
-{#                                <div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>#}
-{#                            {% elif liked_user not in user.pet.liked_users %}#}
-{#                                <div class="{{block_name}}" >#}
-{#                                    <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i><a class="count" id="{{ block_name }}_1">{{ user.pet.like_count }}</a></h5>#}
-{#                                    <button type="button" class="w3-red w3-padding w3-margin-bottom w3-btn-block w3-round" id="{{ block_name }}_2">Vote</button>#}
-{#                                </div>#}
-{#                                <script type="text/javascript">#}
-{#                                    $(".{{ block_name }}").on("click", function(){#}
-{#                                        var $counter = $(this).find(".count");#}
-{#                                        var count = $counter.text() | 0;#}
-{#                                        $.ajax({#}
-{#                                            url: '/home',#}
-{#                                            data: {#}
-{#                                                username : "{{ user.username }}",#}
-{#                                                votes : count#}
-{#                                            },#}
-{#                                            type: 'POST'#}
-{#                                        })#}
-{#                                        .done(function (data) {#}
-{#                                            $("#{{ block_name }}_1").text(data.votes).show()#}
-{#                                        });#}
-{#                                        event.preventDefault();#}
-{#                                        $('#{{ block_name }}_2').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">Voted</div>');#}
-{#                                    });#}
-{#                                </script>#}
-{#                            {% endif %}#}
-{#                        </div>#}
-{#                        <div class="w3-third w3-container w3-margin-bottom">#}
-{#                            <div class="w3-container w3-green w3-center">#}
-{#                                <p>More Pics</p>#}
-{#                            </div>#}
-{#                            {% for i in range(0,4) %}#}
-{#                                <div class="w3-half">#}
-{#                                    <img src="{{ user.pet.upload.img_upload }}" width="100%">#}
-{#                                </div>#}
-{#                            {% endfor %}#}
-{#                        </div>#}
-{#                    </div>#}
-{#                {% endif %}#}
-{#            {% endfor %}#}
-{#        </div>#}
-{#    </div>#}
 </div>
 <footer class="w3-container w3-red w3-center">
     <h3 style="font-family: 'Lobster', serif">PetsBook</h3>
