--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,7 +3,7 @@
 <title>PetsBook</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type=text/javascript src="../static/jquery-3.1.1.min.js"></script>
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<link rel="stylesheet" href="../static/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Great+Vibes">
