--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type=text/javascript src="../static/jquery-3.1.1.min.js"></script>
 <script type=text/javascript src="../static/garand-sticky/jquery.sticky.js"></script>
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<link rel="stylesheet" href="../static/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Great+Vibes">
@@ -101,7 +101,7 @@
                             }
                         </style>
                         <textarea name="name" form="update_profile" placeholder="Enter your pet name here!" maxlength="25" style="width: 25%; height: 60px" required></textarea>
-                        <textarea name="des" form="update_profile" placeholder="Write a short description about your pet!" style="width: 100%; height: 100px" required></textarea>
+                        <textarea name="des" form="update_profile" placeholder="Write a short description about your pet!" maxlength="75" style="width: 100%; height: 100px" required></textarea>
                         <div style="height: 0px; overflow: hidden">
                                 <input type="file" id="img_ava" name="img_ava">
                         </div>
@@ -198,7 +198,7 @@
             <div class="w3-half w3-container">
                 {% if logged_in_user == user %}
                     <div class="w3-card-2" style="margin-bottom: 32px">
-                        <div class="w3-container w3-green">
+                        <div class="w3-container w3-green w3-center">
                             <h1>Upload</h1>
                         </div>
                         <div class="w3-container w3-margin-top">
@@ -247,10 +247,10 @@
                         </div>
                     </div>
                 {% endif %}
-                {% if user.pet.uploads is defined %}
-                    <div class="w3-container w3-green sidebar">
-                        <h1>Posts</h1>
-                    </div>
+                <div class="w3-container w3-green w3-center sidebar">
+                    <h1>Posts</h1>
+                </div>
+                {% if user.pet.uploads != [] %}
                     <script>
                         $(document).ready(function(){
                             if (jQuery(window).innerWidth >600) {
@@ -266,6 +266,10 @@
                                 <h5><i class="w3-text-green fa fa-comment w3-margin-right"></i>{{ user.pet.uploads[i].caption }}</h5>
                             </div>
                         {% endfor %}
+                    </div>
+                {% else %}
+                    <div class="w3-container w3-center">
+                        <h3 class="w3-text-grey">No posts at the moment</h3>
                     </div>
                 {% endif %}
             </div>
