--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -118,7 +118,7 @@ for (i = 0; i < close.length; i++) {
                             <h5><i class="w3-text-green fa fa-user w3-margin-right"></i>{{ user.username }}</h5>
                             <h5><i class="w3-text-green fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h5>
                             <h5><i class="w3-text-green fa fa-pencil w3-margin-right"></i>{{ user.pet.des }}</h5>
-                            <h5><i class="w3-text-yellow fa fa-trophy  w3-margin-right"></i>{{ user.pet.rank }}</h5>
+                            <h5><i class="w3-text-yellow fa fa-trophy  w3-margin-right"></i>{{ user.rank }}</h5>
                             {% if logged_in_user.username in user.pet.liked_users %}
                                 <h5 class="w3-border-bottom"><i class="w3-text-red fa fa-heart w3-margin-right"></i>{{ user.pet.like_count }}</h5>
                                 <div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>
