--- a/templates/profile.html
+++ b/templates/profile.html
@@ -142,12 +142,12 @@
                     </div>
                     <div class="w3-container">
                         {% if logged_in_user.username in user.pet.liked_users %}
-                            <p class="w3-xxxlarge"><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.pet.rank }}</p>
+                            <p class="w3-xxxlarge"><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.rank }}</p>
                             <p class="w3-xxxlarge"><i class="w3-text-red fa fa-heart w3-margin-left w3-margin-right"></i>{{ user.pet.like_count }}</p>
                             <div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>
                         {% elif logged_in_user not in user.pet.liked_users %}
                             <div class="stats">
-                                <p class="w3-xxxlarge"><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.pet.rank }}</p>
+                                <p class="w3-xxxlarge"><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.rank }}</p>
                                 <p class="w3-xxxlarge"><i class="w3-text-red fa fa-heart w3-margin-left w3-margin-right"></i><a class="count" id="votes">{{ user.pet.like_count }}</a></p>
                                 <button type="button" name="vote" class="w3-red w3-padding w3-margin-bottom w3-btn-block w3-round" id="vote">Vote</button>
                             </div>
