--- a/templates/profile.html
+++ b/templates/profile.html
@@ -259,7 +259,7 @@
                         })
                     </script>
                     <div class="w3-container w3-border-left">
-                        {% for i in range(0, user.pet.uploads|length) %}
+                        {% for i in range(user.pet.uploads|length - 1, -1, -1) %}
                             {% set block_name = "block_" + i|string %}
                             <div class="w3-border-bottom w3-margin-bottom">
                                 <img src="../static/uploads/{{ user.pet.uploads[i].img_upload }}" class="w3-image w3-margin-top w3-round" style="width: 100%">
