--- a/templates/profile.html
+++ b/templates/profile.html
@@ -49,18 +49,18 @@
     </div>
 
 <!-- Navbar (placed at the bottom of the header image) -->
-    <ul class="w3-navbar w3-xlarge w3-red w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-        <li><a class="w3-hover-green" href="{{ url_for("home") }}">Home</a></li>
-        <li><a class="w3-hover-green" href="{{ url_for("get_profile", username=logged_in_user.username) }}">Profile</a></li>
-        <li><a class="w3-hover-green" href="{{ url_for("do_signout") }}">Sign Out</a></li>
+    <ul class="w3-navbar w3-xlarge w3-green w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
+        <li><a class="w3-hover-red" href="{{ url_for("home") }}">Home</a></li>
+        <li><a class="w3-hover-red" href="{{ url_for("get_profile", username=logged_in_user.username) }}">Profile</a></li>
+        <li><a class="w3-hover-red" href="{{ url_for("do_signout") }}">Sign Out</a></li>
     </ul>
 </header>
 
 {#<!-- Navbar on small screens -->#}
-<ul class="w3-navbar w3-large w3-margin-top w3-red w3-hide-large w3-hide-medium">
-    <li><a class="w3-hover-green" href="{{ url_for("home") }}">Home</a></li>
-    <li><a class="w3-hover-green" href="{{ url_for("get_profile", username=logged_in_user.username) }}">Profile</a></li>
-    <li><a class="w3-hover-green" href="{{ url_for("do_signout") }}">Sign Out</a></li>
+<ul class="w3-navbar w3-large w3-margin-top w3-green w3-hide-large w3-hide-medium">
+    <li><a class="w3-hover-red" href="{{ url_for("home") }}">Home</a></li>
+    <li><a class="w3-hover-red" href="{{ url_for("get_profile", username=logged_in_user.username) }}">Profile</a></li>
+    <li><a class="w3-hover-red" href="{{ url_for("do_signout") }}">Sign Out</a></li>
 </ul>
 
 <!-- Page content -->
@@ -142,13 +142,13 @@
                     </div>
                     <div class="w3-container">
                         {% if logged_in_user.username in user.pet.liked_users %}
-                            <p class="w3-xxxlarge"><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.rank }}</p>
-                            <p class="w3-xxxlarge"><i class="w3-text-red fa fa-heart w3-margin-left w3-margin-right"></i>{{ user.pet.like_count }}</p>
+                            <h1><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.rank }}</h1>
+                            <h1><i class="w3-text-red fa fa-heart w3-margin-left w3-margin-right"></i>{{ user.pet.like_count }}</h1>
                             <div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>
                         {% elif logged_in_user not in user.pet.liked_users %}
                             <div class="stats">
-                                <p class="w3-xxxlarge"><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.rank }}</p>
-                                <p class="w3-xxxlarge"><i class="w3-text-red fa fa-heart w3-margin-left w3-margin-right"></i><a class="count" id="votes">{{ user.pet.like_count }}</a></p>
+                                <h1><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.rank }}</h1>
+                                <h1><i class="w3-text-red fa fa-heart w3-margin-left w3-margin-right"></i><a class="count" id="votes">{{ user.pet.like_count }}</a></h1>
                                 <button type="button" name="vote" class="w3-red w3-padding w3-margin-bottom w3-btn-block w3-round" id="vote">Vote</button>
                             </div>
                             <script type="text/javascript">
@@ -156,7 +156,7 @@
                                     var $counter = $(this).find(".count");
                                     var count = $counter.text() | 0;
                                     $.ajax({
-                                        url: '/profile',
+                                        url: '/profile/{{ user.username }}',
                                         data: {
                                             votes : count
                                         },
@@ -168,7 +168,7 @@
                                     event.preventDefault();
                                     $('#vote').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">Voted</div>');
                                 });
-                                </script>
+                            </script>
                         {% endif %}
                     </div>
                 </div>
