--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -86,12 +86,12 @@ for (i = 0; i < close.length; i++) {
         <div class="w3-quarter w3-container w3-margin-top">
             <div class="w3-border-bottom" id="sidebar">
                 <div class="w3-container w3-green w3-round w3-center">
-                    <h1>Top 10</h1>
+                    <h1>Top 15</h1>
                 </div>
                 <div class="w3-container">
-                    {% for pet in rank %}
-                        <h5><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ pet[1] }} : {{ pet[0] }}</h5>
-                    {% endfor %}
+                        {% for pet in rank %}
+                            <a href="{{ url_for("get_profile", username=pet[1]) }}" style="text-decoration: none"><h5><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ pet[1] }}</h5></a>
+                        {% endfor %}
                 </div>
             </div>
             <script>
@@ -108,7 +108,7 @@ for (i = 0; i < close.length; i++) {
                     {% set block_name = "block_" + user.username %}
                     <div class="w3-rest w3-border-bottom w3-margin-bottom">
                         <div class="hovereffect w3-container w3-twothird w3-margin-top w3-margin-bottom">
-                            <img src="../static/uploads/{{ user.pet.img_ava }}" class="w3-image" width="100%">
+                            <img src="../static/uploads/{{ user.pet.img_ava }}" class="w3-image w3-round" width="100%">
                             <div class="overlay">
                                <h2>{{ user.pet.name }}</h2>
                                <a class="info" href="{{ url_for("get_profile", username=user.username) }}">View Profile</a>
@@ -150,10 +150,13 @@ for (i = 0; i < close.length; i++) {
                         </div>
                         <div class="w3-third w3-container w3-margin-bottom">
                             <div class="w3-container w3-green w3-center">
-                                <p>More Pics</p>
+                                <p>Posts</p>
                             </div>
                             {% for i in range(0, user.pet.uploads|length) %}
-                                <img class="mySlides_{{ user.username }} w3-image w3-animate-right" src="../static/uploads/{{ user.pet.uploads[i].img_upload }}">
+                                <div class="w3-animate-right mySlides_{{ user.username }}">
+                                    <a href="{{ url_for("get_profile", username=user.username) }}"><img class="w3-image" src="../static/uploads/{{ user.pet.uploads[i].img_upload }}"></a>
+                                    <h5><i class="w3-text-green fa fa-comment w3-margin-right"></i>{{ user.pet.uploads[i].caption }}</h5>
+                                </div>
                             {% endfor %}
                             <script>
                                 carouse_{{ user.username }}(0);
