--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -38,7 +38,8 @@
         <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_1.jpg" style="width: 100%;">
         <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_2.jpg" style="width: 100%;">
         <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_3.png" style="width: 100%;">
-        <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_1.jpg" style="width: 100%;">
+        <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_4.jpg" style="width: 100%;">
+        <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_5.jpg" style="width: 100%;">
         <script>
             var slideIndex = 0;
             carousel();
@@ -51,7 +52,7 @@
                 slideIndex++;
                 if (slideIndex > x.length) {slideIndex = 1}
                 x[slideIndex-1].style.display = "block";
-                setTimeout(carousel, 10000); // Change image every 2 seconds
+                setTimeout(carousel, 10000);
             }
         </script>
         <div class="w3-display-middle w3-padding-xlarge w3-border w3-wide w3-light-grey w3-text-dark-grey w3-center w3-round" style="opacity: 0.7">
