--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -17,7 +17,7 @@
 <!-- Header -->
 <ul class="w3-navbar w3-green">
     <div class="w3-container w3-center w3-third">
-        <h1 class="w3-border-right" style="font-family: 'Lobster', serif">PetsBook</h1>
+        <a href="{{ url_for("home") }}" style="text-decoration: none"><h1 class="w3-border-right" style="font-family: 'Lobster', serif">PetsBook</h1></a>
     </div>
     <div class="w3-container w3-twothird w3-center">
         <h1 style="font-family: 'Great Vibes', serif"><i>"Where cuteness spreads around."</i></h1>
@@ -43,6 +43,7 @@ for (i = 0; i < close.length; i++) {
     <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_2.jpg" style="width: 100%;">
     <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_3.png" style="width: 100%;">
     <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_4.jpg" style="width: 100%;">
+    <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_5.jpg" style="width: 100%;">
     <script>
         var slideIndex = 0;
         carousel();
@@ -89,8 +90,8 @@ for (i = 0; i < close.length; i++) {
                     <h1>Top 15</h1>
                 </div>
                 <div class="w3-container">
-                        {% for pet in rank %}
-                            <a href="{{ url_for("get_profile", username=pet[1]) }}" style="text-decoration: none"><h5><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ pet[1] }}</h5></a>
+                        {% for pet in rank[0:14] %}
+                            <a href="{{ url_for("get_profile", username=pet[1]) }}" style="text-decoration: none"><h5 class="w3-hover-red w3-round" style="font-weight: bold"><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ pet[1] }}</h5></a>
                         {% endfor %}
                 </div>
             </div>
@@ -115,7 +116,7 @@ for (i = 0; i < close.length; i++) {
                             </div>
                         </div>
                         <div class="w3-third w3-container">
-                            <a href="{{ url_for("get_profile", username=user.username) }}" style="text-decoration: none"><h5><i class="w3-text-green fa fa-user w3-margin-right"></i>{{ user.username }}</h5></a>
+                            <a href="{{ url_for("get_profile", username=user.username) }}" style="text-decoration: none"><h5 style="font-weight: bold"><i class="w3-text-green fa fa-user w3-margin-right"></i>{{ user.username }}</h5></a>
                             <h5><i class="w3-text-green fa fa-paw w3-margin-right"></i>{{ user.pet.name }}</h5>
                             <h5><i class="w3-text-green fa fa-pencil w3-margin-right"></i>{{ user.pet.des }}</h5>
                             <h5><i class="w3-text-yellow fa fa-trophy  w3-margin-right"></i>{{ user.rank }}</h5>
@@ -143,7 +144,7 @@ for (i = 0; i < close.length; i++) {
                                             $("#{{ block_name }}_1").text(data.votes).show()
                                         });
                                         event.preventDefault();
-                                        $('#{{ block_name }}_2').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">Voted</div>');
+                                        $('#{{ block_name }}_2').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>');
                                     });
                                 </script>
                             {% endif %}
@@ -181,7 +182,7 @@ for (i = 0; i < close.length; i++) {
     </div>
 </div>
 <footer class="w3-container w3-red w3-center">
-    <h3 style="font-family: 'Lobster', serif">PetsBook</h3>
+    <a href="{{ url_for("home") }}" style="text-decoration: none"><h3 style="font-family: 'Lobster', serif">PetsBook</h3></a>
     <p>petsbookdevteam@gmail.com</p>
 </footer>
 </body>
