--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
 <!-- Header -->
 <ul class="w3-navbar w3-green">
     <div class="w3-container w3-center w3-third">
-        <h1 class="w3-border-right" style="font-family: 'Lobster', serif">PetsBook</h1>
+        <a href="{{ url_for("home") }}" style="text-decoration: none"><h1 class="w3-border-right" style="font-family: 'Lobster', serif">PetsBook</h1></a>
     </div>
     <div class="w3-container w3-twothird w3-center">
         <h1 style="font-family: 'Great Vibes', serif"><i>"Where cuteness spreads around."</i></h1>
@@ -27,7 +27,8 @@
     <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_1.jpg" style="width: 100%;">
     <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_2.jpg" style="width: 100%;">
     <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_3.png" style="width: 100%;">
-    <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_1.jpg" style="width: 100%;">
+    <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_4.jpg" style="width: 100%;">
+    <img class="mySlides w3-animate-fading w3-image" src="../static/slideshow/img_5.jpg" style="width: 100%;">
     <script>
         var slideIndex = 0;
         carousel();
@@ -40,7 +41,7 @@
             slideIndex++;
             if (slideIndex > x.length) {slideIndex = 1}
             x[slideIndex-1].style.display = "block";
-            setTimeout(carousel, 10000); // Change image every 2 seconds
+            setTimeout(carousel, 10000);
         }
     </script>
     <div class="w3-display-middle w3-padding-xlarge w3-border w3-wide w3-light-grey w3-text-dark-grey w3-center w3-round" style="opacity: 0.7">
@@ -82,7 +83,7 @@
                 }
             }
             </script>
-            <div class="w3-card-2" style="margin: 64px">
+            <div class="w3-card-2 w3-round" style="margin: 16px">
                 <div class="w3-container w3-green">
                     <h1>Update Profile</h1>
                 </div>
@@ -100,7 +101,7 @@
                                 resize: none;
                             }
                         </style>
-                        <textarea name="name" form="update_profile" placeholder="Enter your pet name here!" maxlength="25" style="width: 100%; height: 60px" required></textarea>
+                        <textarea name="name" form="update_profile" placeholder="Enter your pet name!" maxlength="25" style="width: 100%; height: 60px" required></textarea>
                         <textarea name="des" form="update_profile" placeholder="Write a short description about your pet!" maxlength="75" style="width: 100%; height: 100px" required></textarea>
                         <div style="height: 0px; overflow: hidden">
                                 <input type="file" id="img_ava" name="img_ava">
@@ -141,17 +142,23 @@
                         <h1>Info</h1>
                     </div>
                     <div class="w3-container">
+                        <style>
+                            h1 {
+                                display: inline;
+                            }
+                            p {
+                                display: inline;
+                            }
+                        </style>
+                        <h1 class="w3-margin-right"><i class="w3-text-yellow fa fa-trophy w3-margin-right" style="width: 36px"></i>{{ user.rank }}</h1><p class="w3-text-grey">(rank)</p><br>
+                        <h1 class="w3-margin-right"><i class="w3-text-green fa fa-picture-o w3-margin-right" style="width: 36px"></i>{{ user.pet.uploads|length }}</h1><p class="w3-text-grey">(posts)</p><br>
                         {% if logged_in_user.username in user.pet.liked_users %}
-                            <h1><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.rank }}</h1>
-                            <h1><i class="w3-text-green fa fa-picture-o w3-margin-left w3-margin-right"></i>{{ user.pet.uploads|length }}</h1>
-                            <h1><i class="w3-text-red fa fa-heart w3-margin-left w3-margin-right"></i>{{ user.pet.like_count }}</h1>
+                            <h1 class="w3-margin-right"><i class="w3-text-red fa fa-heart w3-margin-right" style="width: 36px"></i>{{ user.pet.like_count }}</h1><p class="w3-text-grey">(votes)</p><br>
                             <div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>
                         {% elif logged_in_user not in user.pet.liked_users %}
                             <div class="stats">
-                                <h1><i class="w3-text-yellow fa fa-trophy w3-margin-left w3-margin-right"></i>{{ user.rank }}</h1>
-                                <h1><i class="w3-text-green fa fa-picture-o w3-margin-left w3-margin-right"></i>{{ user.pet.uploads|length }}</h1>
-                                <h1><i class="w3-text-red fa fa-heart w3-margin-left w3-margin-right"></i><a class="count" id="votes">{{ user.pet.like_count }}</a></h1>
-                                <button type="button" name="vote" class="w3-red w3-padding w3-margin-bottom w3-btn-block w3-round" id="vote">Vote</button>
+                                <h1 class="w3-margin-right"><i class="w3-text-red fa fa-heart w3-margin-right" style="width: 36px"></i><a class="count" id="votes">{{ user.pet.like_count }}</a></h1><p class="w3-text-grey">(votes)</p><br>
+                                <button type="button" class="w3-red w3-padding w3-margin-bottom w3-btn-block w3-round" id="vote">Vote</button>
                             </div>
                             <script type="text/javascript">
                                 $(".stats").on("click", function(){
@@ -168,17 +175,34 @@
                                         $("#votes").text(data.votes).show()
                                     });
                                     event.preventDefault();
-                                    $('#vote').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center">Voted</div>');
+                                    $('#vote').replaceWith('<div class="w3-container w3-red w3-padding w3-margin-bottom w3-center w3-round">Voted</div>');
                                 });
                             </script>
                         {% endif %}
+                        <style>
+                            a {
+                                text-decoration: none;
+                                display: inline;
+                            }
+                            p {
+                                display: inline;
+                            }
+                            a:hover {
+                                text-decoration: underline;
+                            }
+                        </style>
+                        <div class="w3-margin-bottom">
+                            {% for i in range(user.pet.liked_users | length - 1, -1, -1) %}
+                                <a href="{{ url_for("get_profile", username=user.pet.liked_users[i]) }}" class="w3-text-grey">{{ user.pet.liked_users[i] }}</a><p class="w3-text-grey">,</p>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="w3-quarter w3-container w3-margin-bottom">
                 <div class="w3-card-2 w3-round sidebar">
                     <div class="w3-container w3-green w3-center">
-                        <h1>Biography</h1>
+                        <h1>Bio</h1>
                     </div>
                     <div class="w3-container w3-margin-top">
                         <img class="w3-round w3-image" src="../static/uploads/{{ user.pet.img_ava }}" style="width: 100%">
@@ -262,7 +286,7 @@
                             })
                         </script>
                         <div class="w3-container">
-                            {% for i in range(user.pet.uploads|length - 1, -1, -1) %}
+                            {% for i in range(user.pet.uploads | length - 1, -1, -1) %}
                                 {% set block_name = "block_" + i|string %}
                                 <div class="w3-border-bottom w3-margin-bottom">
                                     <img src="../static/uploads/{{ user.pet.uploads[i].img_upload }}" class="w3-image w3-margin-top w3-round" style="width: 100%">
@@ -281,7 +305,7 @@
     {% endif %}
 </div>
 <footer class="w3-container w3-red w3-center">
-    <h3 style="font-family: 'Lobster', serif">PetsBook</h3>
+    <a href="{{ url_for("home") }}" style="text-decoration: none"><h3 style="font-family: 'Lobster', serif">PetsBook</h3></a>
     <p>petsbookdevteam@gmail.com</p>
 </footer>
 </body>
